# Objektinis

./: .gitignore  CMakeLists.txt  Funkcijos.cpp  Funkcijos.h  Masyvai.cpp  README.md  Studentas.h  Utilities.cpp  Utilities.h  Vektoriai.cpp  main.cpp  run.bat
deque/: CMakeLists.txt  Deque.cpp  Funkcijos.cpp  Funkcijos.h  Funkcijosdeque.cpp  Funkcijosdeque.h  Studentas.h  Studentasdeque.h
lists/: CMakeLists.txt  Funkcijos.cpp  Funkcijos.h  Funkcijoslists.cpp  Funkcijoslists.h  Lists.cpp  Studentas.h  Studentaslists.h
vectors/: CMakeLists.txt  Funkcijos.cpp  Funkcijosvector.cpp  Funkcijosvector.h  Studentas.h  Studentasvector.h  Vektoriai.cpp
